[package]
name = "mazes101"
version = "0.1.0"
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
